# WRITING_ROBOT

./: README.md  README.md~
coordinate_exposure/: CMakeLists.txt  CMakeLists.txt~  package.xml~
coordinate_exposure/include/coordinate_exposure/: conversion.h~  coordinate_conversion.h
coordinate_exposure/msg/: coordinate_set.msg  coordinate_sets.msg
coordinate_exposure/src/: coordinate_calculation.cpp  coordinate_calculation.cpp~  coordinate_conversion.cpp  coordinate_conversion.cpp~  coordinate_saving.cpp  coordinate_saving.cpp~  routing.cpp  routing.cpp~
coordinate_exposure/srv/: coordinate_sets_exchange.srv~
paper_detection/: CMakeLists.txt  package.xml
paper_detection/include/paper_detection/: point_conversion.h  point_conversion.h~
paper_detection/msg/: point_set.msg  point_set.msg~  point_sets.msg  point_sets.msg~  vector_of_points.msg~
paper_detection/src/: centering.cpp  centering.cpp~  point_conversion.cpp  point_conversion.cpp~  rectangle_detection.cpp  rectangle_detection.cpp~
point_approximation/: CMakeLists.txt  package.xml  package.xml~
point_approximation/msg/: planar_coordinate.msg~  vector_of_coordinates.msg~  vector_of_vector_of_coordinates.msg~
point_approximation/src/: point_chaining.cpp  point_chaining.cpp~
recognition_and_delineation_of_writings/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
recognition_and_delineation_of_writings/launch/: recognition_and_delineation_of_writings.launch
recognition_and_delineation_of_writings/src/: starting_node.cpp  starting_node.cpp~
socket_communication/: CMakeLists.txt  CMakeLists.txt~  package.xml
socket_communication/msg/: connection_msg.msg  current_pos_robot.msg
socket_communication/src/: receive_command.cpp  send_command.cpp
writings_determination/: CMakeLists.txt  CMakeLists.txt~  package.xml
writings_determination/src/: binary.cpp  binary.cpp~  rim.cpp  skeleton.cpp  writings_determination.cpp  writings_determination.cpp~
writings_determination/srv/: image_check.srv~
